<resources>
    <string name="app_name">Doornock</string>
    <string name="service_apdu_description">Služba komunikující se čtečkou zámku</string>
    <string name="service_apdu_aid">F0394148148111</string>

    <string name="menu_activity_key_ring">Klíčenka</string>
    <string name="menu_activity_list_site">Vaše sítě</string>
    <string name="menu_activity_add_site">Přidat síť</string>

    <string name="fragment_site_list_welcome">Vítejte v Doornock!</string>
    <string name="fragment_site_list_add_new">Přidejte si novou síť</string>

    <string name="activity_key_ring_title">Klíčenka</string>

    <string name="activity_detail_site_title">Detail sítě</string>
    <string name="activity_detail_site_generating_key">Probíhá přegenerování klíče</string>
    <string name="activity_detail_site_remove_site">Ostranit síť</string>
    <string name="activity_detail_site_about_site">O síti</string>
    <string name="activity_detail_site_url">URL</string>
    <string name="activity_detail_site_guid">GUID sítě</string>
    <string name="activity_detail_site_about_account">O účtu</string>
    <string name="activity_detail_site_account_login">Přihlašovací jméno</string>
    <string name="activity_detail_site_about_device">O zařízení</string>
    <string name="activity_detail_site_about_device_id">Identifikátor zařízení</string>
    <string name="activity_detail_site_api_key">API klíč</string>
    <string name="activity_detail_site_private_keys">Klíčenka</string>
    <string name="activity_detail_site_private_key">Klíč</string>
    <string name="activity_detail_site_private_key_regenerating">Vygenerovat nový klíč</string>
    <string name="activity_detail_site_require_unlock">Vyžadováno odemknuté zařízení</string>


    <string name="activity_add_site_title">Přidat síť</string>
    <string name="activity_add_site_site_url">URL adresa sítě (http://&#8230;)</string>
    <string name="activity_add_site_know_login">Jsem již zaregistrovaný, přihlasit</string>
    <string name="activity_add_site_device_description">Popisek zařízení</string>
    <string name="activity_add_site_login">Přihlašovací jméno</string>
    <string name="activity_add_site_password">Heslo</string>
    <string name="activity_add_site_add_device">Přidat zařízení</string>
    <string name="activity_add_site_error_invalid_url">Nevalidní url (musí být http/https)</string>
    <string name="activity_add_site_error_missing_description">Zajdete krátký popis zařízení</string>
    <string name="activity_add_site_error_missing_credentials">Nezadali jste přihlašovací jméno</string>
    <string name="activity_add_site_in_progress">Zpracovávám</string>


    <string name="activity_add_site_qr_reader_missing">Nepodařilo se najít aplikaci čtení QR kódů</string>
    <string name="activity_add_site_error_site_already_added">Tuto síť jíž máte přidanou ve vašem zařízení</string>
    <string name="activity_add_site_error_site_bad_guid">Bohužel je síť nevalidní (GUID), prosím kontaktujte správce</string>
    <string name="activity_add_site_error_site_is_unreachable">Nelze se dovolat Sítě</string>
    <string name="activity_add_site_error_site_registration_failed_with_reason">Registrace do sítě se nezdařila: </string>
    <string name="activity_add_site_error_site_registration_failed_title">Registrace se nezdařila</string>
    <string name="activity_add_site_error_site_registration_failed_understand_button">Rozumím</string>
    <string name="activity_add_site_error_site_add_device_failed_with_reason">Nepodařilo se přidat zařízení: </string>

    <string name="activity_add_site_error_site_registration_is_not_supported">Registrace na Doornock síť není povolena</string>
    <string name="activity_add_site_error_site_registration_bad_credentials">Zadali jste špatné uživatelské jméno nebo heslo</string>

    <string name="activity_open_door_popup_title">Otevřít dveře</string>
    <string name="activity_open_door_popup_door_opened">Dveře byly otevřeny</string>
    <string name="activity_open_door_popup_door_error">Při otevírání došlo k chybě na straně serveru</string>

    <string name="error_api_device_is_blocked">Bohužel zařízení je blokované</string>

    <string name="error_api_invalid_guid">Bohužel je síť nevalidní (GUID), prosím kontaktujte správce</string>
    <string name="error_api_invalid_json_input">Bohužel při komunikaci serverem nastala chyba: JSON odpověď serveru není validní či neobsahuje správné údaje</string>
    <string name="error_api_invalid_signature">Bohužel při komunikaci serverem nastala chyba: Bezpečnostní algoritmy nepřijali odpověď, je možný odposlech sítě</string>


    <string name="activity_open_door_popup_list_has_access">%1$s - Máte přístup</string>
    <string name="activity_open_door_popup_list_has_not_access">%1$s - Nemáte přístup</string>


    <string name="service_apdu_notification_node_detected">Terminál detekován</string>
    <string name="service_apdu_notification_site_not_found">Sít nenalezena</string>
    <string name="service_apdu_notification_site_found">Síť nalezena: %1$s</string>
    <string name="service_apdu_notification_site_authentication">Probíhá ověření - %1$s</string>
    <string name="service_apdu_notification_unlock_required">Zařízení musí být odemčeno</string>

</resources>
